[gd_scene load_steps=7 format=3 uid="uid://j52e24vem5ct"]

[ext_resource type="Script" path="res://Scenes/Environment/pile.gd" id="1_hko8s"]
[ext_resource type="Texture2D" uid="uid://qlp2idu4coba" path="res://Assets/Environment/pile_1.png" id="1_nn5y4"]
[ext_resource type="Shader" path="res://Resources/Shaders/outline.gdshader" id="2_vil4p"]
[ext_resource type="AudioStream" uid="uid://c7d57chb15ng5" path="res://Assets/Sounds/Player/shovel.mp3" id="5_hbq0r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dbvvu"]
resource_local_to_scene = true
shader = ExtResource("2_vil4p")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_043ng"]
radius = 21.0
height = 78.0

[node name="Pile" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_hko8s")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dbvvu")
texture = ExtResource("1_nn5y4")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_043ng")

[node name="DigSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hbq0r")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
